--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    steps:
+      - uses: actions/upload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
       - uses: actions/checkout@v2
       - name: npm install and build webpack
         run: |
